TAChart: Split demos off into separate frames (distance, dragdrop, line, multi, radial)

--- a/components/tachart/demo/multi/Main.lfm
+++ b/components/tachart/demo/multi/Main.lfm
@@ -1,14 +1,14 @@
-object Form1: TForm1
-  Left = 464
+object MainForm: TMainForm
+  Left = 424
   Height = 459
-  Top = 321
+  Top = 304
   Width = 529
-  Caption = 'Form1'
+  Caption = 'Multi-Valued Series Demo'
   ClientHeight = 459
   ClientWidth = 529
-  OnCreate = FormCreate
   Position = poScreenCenter
-  LCLVersion = '2.3.0.0'
+  LCLVersion = '4.99.0.0'
+  OnCreate = FormCreate
   object PageControl1: TPageControl
     Left = 0
     Height = 459
@@ -20,487 +20,18 @@ object Form1: TForm1
     TabOrder = 0
     object tsBubble: TTabSheet
       Caption = 'Bubble'
-      ClientHeight = 431
-      ClientWidth = 521
-      object chBubble: TChart
-        Left = 0
-        Height = 431
-        Top = 0
-        Width = 521
-        AxisList = <        
-          item
-            AxisPen.Visible = True
-            Marks.LabelBrush.Style = bsClear
-            Minors = <>
-            Title.LabelFont.Orientation = 900
-            Title.LabelBrush.Style = bsClear
-          end        
-          item
-            TickLength = 0
-            Alignment = calBottom
-            Marks.Attachment = maCenter
-            Marks.Distance = 0
-            Marks.LabelBrush.Style = bsClear
-            Minors = <>
-            Title.LabelBrush.Style = bsClear
-          end>
-        BackColor = clForm
-        Foot.Brush.Color = clBtnFace
-        Foot.Font.Color = clBlue
-        Frame.Visible = False
-        Proportional = True
-        Title.Brush.Color = clBtnFace
-        Title.Font.Color = clBlue
-        Title.Text.Strings = (
-          'TAChart'
-        )
-        Align = alClient
-        object Chart1BubbleSeries1: TBubbleSeries
-          BubbleBrush.Color = clRed
-          BubbleBrush.Style = bsDiagCross
-          Marks.Attachment = maCenter
-          Marks.Distance = 0
-          Marks.Format = '%0:.9g'
-          Marks.Style = smsValue
-          OverrideColor = [bocBrush, bocPen]
-          Source = lcsBubble
-        end
-      end
     end
     object tsStacked: TTabSheet
       Caption = 'Stacked'
-      ClientHeight = 431
-      ClientWidth = 521
-      object chStacked: TChart
-        Left = 0
-        Height = 372
-        Top = 0
-        Width = 521
-        AxisList = <        
-          item
-            Marks.LabelBrush.Style = bsClear
-            Minors = <>
-            Title.LabelFont.Orientation = 900
-            Title.LabelBrush.Style = bsClear
-          end        
-          item
-            Alignment = calBottom
-            Marks.LabelBrush.Style = bsClear
-            Minors = <>
-            Title.LabelBrush.Style = bsClear
-          end>
-        Depth = 10
-        Foot.Brush.Color = clBtnFace
-        Foot.Font.Color = clBlue
-        Legend.GroupFont.Style = [fsBold]
-        Legend.GroupTitles.Strings = (
-          'Levels'
-        )
-        Legend.Visible = True
-        Title.Brush.Color = clBtnFace
-        Title.Font.Color = clBlue
-        Title.Text.Strings = (
-          'TAChart'
-        )
-        Align = alClient
-        object chStackedBarSeries1: TBarSeries
-          Legend.GroupIndex = 0
-          Legend.Multiplicity = lmStyle
-          Active = False
-          ZPosition = 5
-          BarBrush.Color = clRed
-          Depth = 10
-          DepthBrightnessDelta = -40
-          MarkPositions = lmpInside
-          Marks.Format = '%0:.2g'
-          Marks.LinkPen.Visible = False
-          Marks.Style = smsCustom
-          Marks.YIndex = -1
-          Source = ccsStacked
-          Styles = ChartStyles
-        end
-        object chStackedLineSeries1: TLineSeries
-          Legend.GroupIndex = 0
-          Legend.Multiplicity = lmStyle
-          Active = False
-          Depth = 10
-          DepthBrightnessDelta = -40
-          MarkPositions = lmpInside
-          Marks.Format = '%0:.2g'
-          Marks.LinkPen.Visible = False
-          Marks.Style = smsCustom
-          Marks.YIndex = -1
-          Stacked = True
-          Source = ccsStacked
-          Styles = ChartStyles
-        end
-        object chStackedAreaSeries1: TAreaSeries
-          Legend.GroupIndex = 0
-          Legend.Multiplicity = lmStyle
-          ZPosition = 5
-          AreaContourPen.Color = clGreen
-          AreaContourPen.EndCap = pecSquare
-          AreaContourPen.Width = 2
-          Depth = 10
-          DepthBrightnessDelta = -40
-          MarkPositions = lmpInside
-          Marks.Format = '%0:.2g'
-          Marks.LinkPen.Visible = False
-          Marks.Style = smsCustom
-          Marks.YIndex = -1
-          Source = ccsStacked
-          Styles = ChartStyles
-          UseZeroLevel = True
-          ZeroLevel = 1
-        end
-      end
-      object pnStackedControls: TPanel
-        Left = 4
-        Height = 51
-        Top = 376
-        Width = 513
-        Align = alBottom
-        AutoSize = True
-        BorderSpacing.Around = 4
-        BevelOuter = bvNone
-        ClientHeight = 51
-        ClientWidth = 513
-        TabOrder = 1
-        object rgStackedSeries: TRadioGroup
-          Left = 0
-          Height = 51
-          Top = 0
-          Width = 175
-          Align = alLeft
-          AutoFill = False
-          AutoSize = True
-          Caption = ' Type '
-          ChildSizing.LeftRightSpacing = 12
-          ChildSizing.TopBottomSpacing = 6
-          ChildSizing.HorizontalSpacing = 12
-          ChildSizing.ShrinkHorizontal = crsScaleChilds
-          ChildSizing.ShrinkVertical = crsScaleChilds
-          ChildSizing.Layout = cclLeftToRightThenTopToBottom
-          ChildSizing.ControlsPerLine = 3
-          ClientHeight = 31
-          ClientWidth = 171
-          Columns = 3
-          ItemIndex = 0
-          Items.Strings = (
-            'Area'
-            'Bar'
-            'Line'
-          )
-          OnClick = rgStackedSeriesClick
-          TabOrder = 0
-        end
-        object cbPercentage: TCheckBox
-          AnchorSideLeft.Control = rgStackedSeries
-          AnchorSideLeft.Side = asrBottom
-          AnchorSideTop.Control = rgStackedSeries
-          Left = 207
-          Height = 19
-          Top = 23
-          Width = 79
-          BorderSpacing.Left = 32
-          BorderSpacing.Top = 23
-          Caption = 'Percentage'
-          OnChange = cbPercentageChange
-          TabOrder = 1
-        end
-        object cgShowStackLevels: TCheckGroup
-          Left = 331
-          Height = 51
-          Top = 0
-          Width = 182
-          Align = alRight
-          AutoFill = False
-          AutoSize = True
-          Caption = 'Show levels'
-          ChildSizing.LeftRightSpacing = 12
-          ChildSizing.TopBottomSpacing = 6
-          ChildSizing.HorizontalSpacing = 12
-          ChildSizing.ShrinkHorizontal = crsScaleChilds
-          ChildSizing.ShrinkVertical = crsScaleChilds
-          ChildSizing.Layout = cclLeftToRightThenTopToBottom
-          ChildSizing.ControlsPerLine = 3
-          ClientHeight = 31
-          ClientWidth = 178
-          Columns = 3
-          Items.Strings = (
-            'red'
-            'green'
-            'blue'
-          )
-          OnItemClick = cgShowStackLevelsItemClick
-          TabOrder = 2
-          Data = {
-            03000000030303
-          }
-        end
-      end
     end
     object tsWhiskers: TTabSheet
       Caption = 'Box-and-whiskers'
-      ClientHeight = 431
-      ClientWidth = 521
-      object chWhiskers: TChart
-        Left = 0
-        Height = 431
-        Top = 0
-        Width = 521
-        AxisList = <        
-          item
-            Grid.Visible = False
-            Marks.LabelBrush.Style = bsClear
-            Minors = <>
-            Title.LabelFont.Orientation = 900
-            Title.LabelBrush.Style = bsClear
-          end        
-          item
-            Alignment = calBottom
-            Marks.LabelBrush.Style = bsClear
-            Minors = <>
-            Title.LabelBrush.Style = bsClear
-          end>
-        Foot.Brush.Color = clBtnFace
-        Foot.Font.Color = clBlue
-        Legend.SymbolWidth = 40
-        Legend.Visible = True
-        Title.Brush.Color = clBtnFace
-        Title.Font.Color = clBlue
-        Title.Text.Strings = (
-          'TAChart'
-        )
-        Align = alClient
-        object chWhiskersBoxAndWhiskerSeries1: TBoxAndWhiskerSeries
-          Title = 't1'
-          BoxBrush.Color = clGreen
-          BoxPen.Color = clMaroon
-          MedianPen.Color = clLime
-          MedianPen.Width = 2
-          WhiskersPen.Color = clBlue
-        end
-      end
     end
     object tsOHLC: TTabSheet
       Caption = 'OHLC'
-      ClientHeight = 431
-      ClientWidth = 521
-      object chOHLC: TChart
-        Left = 0
-        Height = 431
-        Top = 0
-        Width = 521
-        AxisList = <        
-          item
-            Grid.Color = clGray
-            TickLength = 0
-            Marks.LabelBrush.Style = bsClear
-            Minors = <>
-            Title.LabelFont.Orientation = 900
-            Title.LabelBrush.Style = bsClear
-          end        
-          item
-            Grid.Visible = False
-            Alignment = calBottom
-            Marks.LabelBrush.Style = bsClear
-            Minors = <>
-            Title.LabelBrush.Style = bsClear
-          end>
-        ExpandPercentage = 5
-        Foot.Brush.Color = clBtnFace
-        Foot.Font.Color = clBlue
-        Legend.Visible = True
-        Title.Brush.Color = clBtnFace
-        Title.Brush.Style = bsClear
-        Title.Font.Color = clBlack
-        Title.Font.Style = [fsBold]
-        Title.Text.Strings = (
-          'ACME Corporation'
-        )
-        Title.Visible = True
-        Align = alClient
-        Color = clSkyBlue
-        object chOHLCOpenHighLowCloseSeries1: TOpenHighLowCloseSeries
-          Title = 'test'
-          CandlestickDownBrush.Color = clRed
-          CandlestickUpBrush.Color = clLime
-          DownLinePen.Color = clRed
-          DownLinePen.EndCap = pecSquare
-          DownLinePen.Width = 2
-          LinePen.Color = clBlue
-          LinePen.EndCap = pecSquare
-          LinePen.Width = 2
-          TickWidth = 30
-        end
-      end
     end
     object tsField: TTabSheet
       Caption = 'Field'
-      ClientHeight = 431
-      ClientWidth = 521
-      object chField: TChart
-        Left = 0
-        Height = 397
-        Top = 0
-        Width = 521
-        AxisList = <        
-          item
-            Grid.Visible = False
-            Marks.LabelBrush.Style = bsClear
-            Minors = <>
-            Title.LabelFont.Orientation = 900
-            Title.LabelBrush.Style = bsClear
-          end        
-          item
-            Grid.Visible = False
-            Alignment = calBottom
-            Marks.LabelBrush.Style = bsClear
-            Minors = <>
-            Title.LabelBrush.Style = bsClear
-          end>
-        BackColor = clWhite
-        Foot.Brush.Color = clBtnFace
-        Foot.Font.Color = clBlue
-        Legend.Visible = True
-        Title.Brush.Color = clBtnFace
-        Title.Font.Color = clBlue
-        Title.Text.Strings = (
-          'TAChart'
-        )
-        Align = alClient
-        object chFieldFieldSeries1: TFieldSeries
-          Title = 'Vector field'
-          Arrow.BaseLength = 30
-          Arrow.Length = 40
-          Arrow.Visible = True
-          Arrow.Width = 20
-          Pen.Color = clBlue
-        end
-      end
-      object Panel1: TPanel
-        Left = 0
-        Height = 34
-        Top = 397
-        Width = 521
-        Align = alBottom
-        BevelOuter = bvNone
-        ClientHeight = 34
-        ClientWidth = 521
-        TabOrder = 1
-        object rbRadial: TRadioButton
-          AnchorSideLeft.Control = Panel1
-          AnchorSideTop.Control = Panel1
-          AnchorSideTop.Side = asrCenter
-          Left = 8
-          Height = 19
-          Top = 8
-          Width = 49
-          BorderSpacing.Left = 8
-          Caption = 'radial'
-          Checked = True
-          OnChange = FieldTypeChange
-          TabOrder = 1
-          TabStop = True
-        end
-        object rbTangential: TRadioButton
-          AnchorSideLeft.Control = rbRadial
-          AnchorSideLeft.Side = asrBottom
-          AnchorSideTop.Control = Panel1
-          AnchorSideTop.Side = asrCenter
-          Left = 73
-          Height = 19
-          Top = 8
-          Width = 73
-          BorderSpacing.Left = 16
-          Caption = 'tangential'
-          OnChange = FieldTypeChange
-          TabOrder = 0
-        end
-        object Label1: TLabel
-          AnchorSideLeft.Control = rbTangential
-          AnchorSideLeft.Side = asrBottom
-          AnchorSideTop.Control = Panel1
-          AnchorSideTop.Side = asrCenter
-          Left = 196
-          Height = 15
-          Top = 10
-          Width = 96
-          BorderSpacing.Left = 50
-          Caption = 'Max vector length'
-        end
-        object edMaxVectorLength: TFloatSpinEdit
-          AnchorSideLeft.Control = Label1
-          AnchorSideLeft.Side = asrBottom
-          AnchorSideTop.Control = Panel1
-          AnchorSideTop.Side = asrCenter
-          Left = 300
-          Height = 23
-          Top = 6
-          Width = 74
-          Alignment = taRightJustify
-          BorderSpacing.Left = 8
-          Increment = 0.1
-          MaxValue = 10
-          MinValue = 0.1
-          OnChange = edMaxVectorLengthChange
-          TabOrder = 2
-          Value = 0.5
-        end
-      end
     end
-  end
-  object lcsBubble: TListChartSource
-    DataPoints.Strings = (
-      '10|50|3|?|'
-      '20|30|1|?|'
-      '35|20|9|?|'
-      '50|40|6|$00FF00|'
-      '60|50|15|?|'
-      '80|60|2|?|'
-    )
-    YCount = 2
-    Left = 130
-    Top = 65
-  end
-  object rcsStacked: TRandomChartSource
-    PointsNumber = 9
-    RandSeed = 317042356
-    XMax = 9
-    XMin = 1
-    YCount = 3
-    YMax = 20
-    YMin = 3
-    Left = 244
-    Top = 65
-  end
-  object ccsStacked: TCalculatedChartSource
-    Origin = rcsStacked
-    Left = 244
-    Top = 136
-  end
-  object ChartStyles: TChartStyles
-    Styles = <    
-      item
-        Brush.Color = clRed
-        Pen.Color = clMaroon
-        Pen.Width = 2
-        Text = 'red'
-      end    
-      item
-        Brush.Color = clLime
-        Pen.Color = clGreen
-        Pen.Width = 2
-        Text = 'green'
-      end    
-      item
-        Brush.Color = clBlue
-        Pen.Color = clNavy
-        Pen.Width = 2
-        Text = 'blue'
-      end>
-    Left = 244
-    Top = 208
   end
 end
