--- a/components/tachart/demo/radial/main.lfm
+++ b/components/tachart/demo/radial/main.lfm
@@ -1,647 +1,28 @@
-object Form1: TForm1
-  Left = 443
+object MainForm: TMainForm
+  Left = 366
   Height = 559
-  Top = 340
+  Top = 232
   Width = 659
-  Caption = 'Form1'
+  Caption = 'TAChart RadialSeries Demo'
   ClientHeight = 559
   ClientWidth = 659
-  OnCreate = FormCreate
   Position = poScreenCenter
-  LCLVersion = '2.3.0.0'
-  object PageControl1: TPageControl
+  LCLVersion = '4.99.0.0'
+  OnCreate = FormCreate
+  object PageControl: TPageControl
     Left = 0
     Height = 559
     Top = 0
     Width = 659
-    ActivePage = tsPie
+    ActivePage = tsPolar
     Align = alClient
-    TabIndex = 0
+    TabIndex = 1
     TabOrder = 0
     object tsPie: TTabSheet
       Caption = 'Pie'
-      ClientHeight = 531
-      ClientWidth = 651
-      object ChartPie: TChart
-        Left = 0
-        Height = 407
-        Top = 124
-        Width = 651
-        AxisList = <        
-          item
-            Visible = False
-            Marks.LabelBrush.Style = bsClear
-            Minors = <>
-            Title.LabelFont.Orientation = 900
-            Title.LabelBrush.Style = bsClear
-          end        
-          item
-            Visible = False
-            Alignment = calBottom
-            Marks.LabelBrush.Style = bsClear
-            Minors = <>
-            Title.LabelBrush.Style = bsClear
-          end>
-        Foot.Brush.Color = clBtnFace
-        Foot.Font.Color = clBlue
-        Title.Alignment = taLeftJustify
-        Title.Brush.Color = clNone
-        Title.Font.Color = clBlue
-        Title.Text.Strings = (
-          '  Click on a slice to explode/unexplode it'
-        )
-        Title.Visible = True
-        Toolset = ChartToolset1
-        Align = alClient
-        Color = clDefault
-        OnMouseDown = ChartPieMouseDown
-        object ChartPiePieSeries1: TPieSeries
-          DepthBrightnessDelta = -32
-          Exploded = True
-          Marks.Distance = 40
-          Marks.Format = '%2:s'
-          Marks.Frame.Color = clSilver
-          Marks.LinkPen.Color = clSilver
-          Marks.Style = smsLabel
-          Source = ListChartSource1
-        end
-      end
-      object Panel1: TPanel
-        AnchorSideTop.Side = asrCenter
-        Left = 0
-        Height = 124
-        Top = 0
-        Width = 651
-        Align = alTop
-        Alignment = taLeftJustify
-        Anchors = [akTop, akRight]
-        AutoSize = True
-        BevelOuter = bvNone
-        ClientHeight = 124
-        ClientWidth = 651
-        TabOrder = 1
-        object seWords: TSpinEdit
-          AnchorSideLeft.Control = lblWords
-          AnchorSideLeft.Side = asrBottom
-          AnchorSideTop.Control = cbShowLabels
-          AnchorSideTop.Side = asrCenter
-          AnchorSideRight.Control = lblInnerRadius
-          Left = 222
-          Height = 23
-          Top = 6
-          Width = 72
-          BorderSpacing.Top = 6
-          BorderSpacing.Right = 24
-          MaxValue = 10
-          OnChange = seWordsChange
-          TabOrder = 0
-          Value = 1
-        end
-        object lblWords: TLabel
-          AnchorSideLeft.Control = cbMarkPositions
-          AnchorSideLeft.Side = asrBottom
-          AnchorSideTop.Control = seWords
-          AnchorSideTop.Side = asrCenter
-          AnchorSideRight.Control = seWords
-          Left = 151
-          Height = 15
-          Top = 10
-          Width = 63
-          BorderSpacing.Left = 16
-          BorderSpacing.Right = 8
-          Caption = 'Label words'
-        end
-        object seLabelAngle: TSpinEdit
-          AnchorSideLeft.Control = seWords
-          AnchorSideTop.Control = seWords
-          AnchorSideTop.Side = asrBottom
-          AnchorSideRight.Control = seWords
-          AnchorSideRight.Side = asrBottom
-          Left = 222
-          Height = 23
-          Top = 35
-          Width = 72
-          Anchors = [akTop, akLeft, akRight]
-          BorderSpacing.Top = 6
-          Increment = 5
-          MaxValue = 360
-          MinValue = -360
-          OnChange = seLabelAngleChange
-          TabOrder = 1
-        end
-        object lblLabelAngle: TLabel
-          AnchorSideTop.Control = seLabelAngle
-          AnchorSideTop.Side = asrCenter
-          AnchorSideRight.Control = seLabelAngle
-          Left = 154
-          Height = 15
-          Top = 39
-          Width = 60
-          Anchors = [akTop, akRight]
-          BorderSpacing.Right = 8
-          Caption = 'Label angle'
-        end
-        object cbRotate: TCheckBox
-          AnchorSideLeft.Control = cbShowLabels
-          AnchorSideTop.Control = seLabelAngle
-          AnchorSideTop.Side = asrCenter
-          AnchorSideRight.Side = asrBottom
-          Left = 8
-          Height = 19
-          Top = 37
-          Width = 87
-          BorderSpacing.Top = 6
-          BorderSpacing.Bottom = 6
-          Caption = 'Rotate labels'
-          OnChange = cbRotateChange
-          TabOrder = 2
-        end
-        object cbMarkPositions: TComboBox
-          AnchorSideLeft.Control = cbShowLabels
-          AnchorSideTop.Control = cbMarkAttachment
-          AnchorSideTop.Side = asrBottom
-          AnchorSideRight.Control = seDepthBrightnessDelta
-          AnchorSideRight.Side = asrBottom
-          Left = 8
-          Height = 23
-          Top = 93
-          Width = 127
-          AutoSize = False
-          BorderSpacing.Bottom = 8
-          ItemHeight = 15
-          ItemIndex = 0
-          Items.Strings = (
-            'Around'
-            'Inside'
-            'Left / right'
-          )
-          OnChange = cbMarkPositionsChange
-          Style = csDropDownList
-          TabOrder = 3
-          Text = 'Around'
-        end
-        object Cb3D: TCheckBox
-          AnchorSideLeft.Control = lblInnerRadius
-          AnchorSideTop.Control = seDepth
-          AnchorSideTop.Side = asrCenter
-          Left = 327
-          Height = 19
-          Top = 66
-          Width = 34
-          Caption = '3D'
-          OnChange = Cb3DChange
-          TabOrder = 4
-        end
-        object seInnerRadius: TSpinEdit
-          AnchorSideLeft.Control = seDepthBrightnessDelta
-          AnchorSideTop.Control = seWords
-          AnchorSideRight.Side = asrBottom
-          Left = 410
-          Height = 23
-          Top = 6
-          Width = 62
-          BorderSpacing.Right = 8
-          OnChange = seInnerRadiusChange
-          TabOrder = 5
-        end
-        object lblInnerRadius: TLabel
-          AnchorSideLeft.Side = asrBottom
-          AnchorSideTop.Control = lblWords
-          AnchorSideRight.Control = seInnerRadius
-          Left = 327
-          Height = 15
-          Top = 10
-          Width = 75
-          Anchors = [akTop, akRight]
-          BorderSpacing.Right = 8
-          Caption = 'Inner radius %'
-        end
-        object lblDepth: TLabel
-          AnchorSideLeft.Control = Cb3D
-          AnchorSideLeft.Side = asrBottom
-          AnchorSideTop.Control = seDepth
-          AnchorSideTop.Side = asrCenter
-          AnchorSideRight.Control = seDepth
-          Left = 370
-          Height = 15
-          Top = 68
-          Width = 32
-          Anchors = [akTop, akRight]
-          BorderSpacing.Left = 12
-          BorderSpacing.Right = 8
-          Caption = 'Depth'
-          Enabled = False
-        end
-        object seDepth: TSpinEdit
-          AnchorSideLeft.Control = seDepthBrightnessDelta
-          AnchorSideTop.Control = seDistance
-          AnchorSideTop.Side = asrCenter
-          AnchorSideRight.Side = asrBottom
-          Left = 410
-          Height = 23
-          Top = 64
-          Width = 62
-          BorderSpacing.Right = 6
-          Enabled = False
-          MaxValue = 1000
-          OnChange = seDepthChange
-          TabOrder = 6
-          Value = 20
-        end
-        object seDepthBrightnessDelta: TSpinEdit
-          AnchorSideLeft.Control = lblDepthBrightnessDelta
-          AnchorSideLeft.Side = asrBottom
-          AnchorSideTop.Control = seDepth
-          AnchorSideTop.Side = asrBottom
-          AnchorSideRight.Control = Panel1
-          AnchorSideRight.Side = asrBottom
-          Left = 410
-          Height = 23
-          Top = 93
-          Width = 62
-          BorderSpacing.Top = 6
-          BorderSpacing.Right = 6
-          Enabled = False
-          MaxValue = 255
-          MinValue = -255
-          OnChange = seDepthBrightnessDeltaChange
-          TabOrder = 7
-          Value = -32
-        end
-        object lblDepthBrightnessDelta: TLabel
-          AnchorSideLeft.Control = seDistance
-          AnchorSideLeft.Side = asrBottom
-          AnchorSideTop.Control = seDepthBrightnessDelta
-          AnchorSideTop.Side = asrCenter
-          AnchorSideRight.Control = seDepthBrightnessDelta
-          Left = 318
-          Height = 15
-          Top = 97
-          Width = 84
-          Alignment = taRightJustify
-          BorderSpacing.Left = 24
-          BorderSpacing.Right = 8
-          Caption = 'Brightness delta'
-          Enabled = False
-          WordWrap = True
-        end
-        object cbShowLabels: TCheckBox
-          AnchorSideLeft.Control = Panel1
-          AnchorSideTop.Control = Panel1
-          AnchorSideRight.Control = lblWords
-          Left = 8
-          Height = 19
-          Top = 8
-          Width = 82
-          BorderSpacing.Left = 8
-          BorderSpacing.Top = 8
-          BorderSpacing.Right = 16
-          Caption = 'Show labels'
-          Checked = True
-          OnChange = cbShowLabelsChange
-          State = cbChecked
-          TabOrder = 8
-        end
-        object lblDistance: TLabel
-          AnchorSideTop.Control = seDistance
-          AnchorSideTop.Side = asrCenter
-          AnchorSideRight.Control = seDistance
-          Left = 169
-          Height = 15
-          Top = 68
-          Width = 45
-          Anchors = [akTop, akRight]
-          BorderSpacing.Right = 8
-          Caption = 'Distance'
-        end
-        object seDistance: TSpinEdit
-          AnchorSideTop.Control = seLabelAngle
-          AnchorSideTop.Side = asrBottom
-          AnchorSideRight.Control = seLabelAngle
-          AnchorSideRight.Side = asrBottom
-          Left = 222
-          Height = 23
-          Top = 64
-          Width = 72
-          Anchors = [akTop, akRight]
-          BorderSpacing.Top = 6
-          MaxValue = 1000
-          OnChange = seDistanceChange
-          TabOrder = 9
-          Value = 40
-        end
-        object cbMarkAttachment: TComboBox
-          AnchorSideLeft.Control = cbShowLabels
-          AnchorSideTop.Control = seDistance
-          AnchorSideTop.Side = asrCenter
-          AnchorSideRight.Control = seDistance
-          AnchorSideRight.Side = asrBottom
-          Left = 8
-          Height = 23
-          Top = 64
-          Width = 125
-          BorderSpacing.Top = 6
-          BorderSpacing.Bottom = 6
-          ItemHeight = 15
-          ItemIndex = 0
-          Items.Strings = (
-            'Default'
-            'Edge'
-            'Center'
-          )
-          OnChange = cbMarkAttachmentChange
-          Style = csDropDownList
-          TabOrder = 10
-          Text = 'Default'
-        end
-        object cbMarkPositionsCentered: TCheckBox
-          AnchorSideLeft.Control = lblWords
-          AnchorSideTop.Control = cbMarkPositions
-          AnchorSideTop.Side = asrCenter
-          AnchorSideRight.Control = cbMarkPositions
-          AnchorSideRight.Side = asrBottom
-          Left = 151
-          Height = 19
-          Top = 95
-          Width = 147
-          Caption = 'Mark positions centered'
-          OnChange = cbMarkPositionsCenteredChange
-          TabOrder = 11
-        end
-        object lblStartAngle: TLabel
-          AnchorSideLeft.Side = asrBottom
-          AnchorSideTop.Control = seStartAngle
-          AnchorSideTop.Side = asrCenter
-          AnchorSideRight.Control = seStartAngle
-          Left = 346
-          Height = 15
-          Top = 39
-          Width = 56
-          Anchors = [akTop, akRight]
-          BorderSpacing.Right = 8
-          Caption = 'Start angle'
-        end
-        object seStartAngle: TSpinEdit
-          AnchorSideLeft.Control = seDepthBrightnessDelta
-          AnchorSideTop.Control = seLabelAngle
-          AnchorSideRight.Side = asrBottom
-          Left = 410
-          Height = 23
-          Top = 35
-          Width = 62
-          BorderSpacing.Right = 6
-          MaxValue = 180
-          MinValue = -180
-          OnChange = seStartAngleChange
-          TabOrder = 12
-        end
-        object seViewAngle: TSpinEdit
-          AnchorSideLeft.Control = seAngleRange
-          AnchorSideTop.Control = seDistance
-          AnchorSideTop.Side = asrCenter
-          AnchorSideRight.Control = cmbOrientation
-          AnchorSideRight.Side = asrBottom
-          Left = 562
-          Height = 23
-          Top = 64
-          Width = 62
-          Anchors = [akTop, akRight]
-          Enabled = False
-          MaxValue = 89
-          OnChange = seViewAngleChange
-          TabOrder = 13
-          Value = 60
-        end
-        object lblViewAngle: TLabel
-          AnchorSideLeft.Side = asrBottom
-          AnchorSideTop.Control = seViewAngle
-          AnchorSideTop.Side = asrCenter
-          AnchorSideRight.Control = seViewAngle
-          Left = 497
-          Height = 15
-          Top = 68
-          Width = 57
-          Anchors = [akTop, akRight]
-          BorderSpacing.Left = 12
-          BorderSpacing.Right = 8
-          Caption = 'View angle'
-          Enabled = False
-        end
-        object cmbOrientation: TComboBox
-          AnchorSideLeft.Control = seDepthBrightnessDelta
-          AnchorSideLeft.Side = asrBottom
-          AnchorSideTop.Control = cbMarkAttachment
-          AnchorSideTop.Side = asrBottom
-          AnchorSideRight.Side = asrBottom
-          Left = 496
-          Height = 23
-          Top = 93
-          Width = 128
-          AutoSize = False
-          BorderSpacing.Left = 24
-          BorderSpacing.Bottom = 8
-          Enabled = False
-          ItemHeight = 15
-          ItemIndex = 0
-          Items.Strings = (
-            'normal'
-            'horizontal'
-            'vertical'
-          )
-          OnChange = cmbOrientationChange
-          Style = csDropDownList
-          TabOrder = 14
-          Text = 'normal'
-        end
-        object lblAngleRange: TLabel
-          AnchorSideLeft.Side = asrBottom
-          AnchorSideTop.Control = seAngleRange
-          AnchorSideTop.Side = asrCenter
-          AnchorSideRight.Control = seAngleRange
-          Left = 493
-          Height = 15
-          Top = 39
-          Width = 64
-          Anchors = [akTop, akRight]
-          BorderSpacing.Left = 12
-          BorderSpacing.Right = 8
-          Caption = 'Angle range'
-        end
-        object seAngleRange: TSpinEdit
-          AnchorSideTop.Control = seStartAngle
-          AnchorSideRight.Control = cmbOrientation
-          AnchorSideRight.Side = asrBottom
-          Left = 565
-          Height = 23
-          Top = 35
-          Width = 59
-          Anchors = [akTop, akRight]
-          MaxValue = 360
-          MinValue = 1
-          OnChange = seAngleRangeChange
-          TabOrder = 15
-          Value = 360
-        end
-      end
     end
     object tsPolar: TTabSheet
       Caption = 'Polar'
-      ClientHeight = 531
-      ClientWidth = 651
-      object ChartPolar: TChart
-        Left = 0
-        Height = 531
-        Top = 0
-        Width = 519
-        AxisList = <        
-          item
-            Marks.LabelBrush.Style = bsClear
-            Minors = <>
-            Title.LabelFont.Orientation = 900
-            Title.LabelBrush.Style = bsClear
-          end        
-          item
-            Alignment = calBottom
-            Marks.LabelBrush.Style = bsClear
-            Minors = <>
-            Title.LabelBrush.Style = bsClear
-          end>
-        Foot.Brush.Color = clBtnFace
-        Foot.Font.Color = clBlue
-        Title.Brush.Color = clBtnFace
-        Title.Font.Color = clBlue
-        Title.Text.Strings = (
-          'TAChart'
-        )
-        Align = alClient
-        Color = clDefault
-        object ChartPolarSeries1: TPolarSeries
-          Brush.Color = 14145495
-          OriginX = -5
-          Pointer.HorizSize = 6
-          Pointer.Style = psDiamond
-          Pointer.VertSize = 6
-          ShowPoints = False
-          Source = RandomChartSource1
-        end
-        object ChartPolarSeries2: TPolarSeries
-          Brush.Color = 12303359
-          LinePen.Color = clRed
-          OriginY = 5
-          Pointer.Brush.Color = clRed
-          Pointer.Style = psCircle
-          ShowPoints = False
-          Source = RandomChartSource1
-        end
-      end
-      object pnlPolar: TPanel
-        Left = 519
-        Height = 531
-        Top = 0
-        Width = 132
-        Align = alRight
-        AutoSize = True
-        ClientHeight = 531
-        ClientWidth = 132
-        TabOrder = 1
-        object cbCloseCircle: TCheckBox
-          AnchorSideLeft.Control = pnlPolar
-          AnchorSideTop.Control = pnlPolar
-          Left = 9
-          Height = 19
-          Top = 9
-          Width = 56
-          BorderSpacing.Left = 8
-          BorderSpacing.Top = 8
-          BorderSpacing.Bottom = 8
-          Caption = 'Closed'
-          OnChange = cbCloseCircleChange
-          TabOrder = 0
-        end
-        object cbShowPoints: TCheckBox
-          AnchorSideLeft.Control = pnlPolar
-          AnchorSideTop.Control = cbCloseCircle
-          AnchorSideTop.Side = asrBottom
-          Left = 9
-          Height = 19
-          Top = 36
-          Width = 85
-          BorderSpacing.Left = 8
-          BorderSpacing.Top = 8
-          BorderSpacing.Right = 8
-          Caption = 'Show points'
-          OnChange = cbShowPointsChange
-          TabOrder = 1
-        end
-        object cbFilled: TCheckBox
-          AnchorSideLeft.Control = pnlPolar
-          AnchorSideTop.Control = cbShowPoints
-          AnchorSideTop.Side = asrBottom
-          Left = 9
-          Height = 19
-          Top = 63
-          Width = 48
-          BorderSpacing.Left = 8
-          BorderSpacing.Top = 8
-          Caption = 'Filled'
-          OnChange = cbFilledChange
-          TabOrder = 2
-        end
-        object sbTransparency: TScrollBar
-          AnchorSideLeft.Control = pnlPolar
-          AnchorSideTop.Control = lblTransparency
-          AnchorSideTop.Side = asrBottom
-          Left = 9
-          Height = 17
-          Top = 117
-          Width = 114
-          BorderSpacing.Left = 8
-          BorderSpacing.Top = 4
-          BorderSpacing.Right = 8
-          Max = 255
-          PageSize = 0
-          TabOrder = 3
-          OnChange = sbTransparencyChange
-        end
-        object lblTransparency: TLabel
-          AnchorSideLeft.Control = pnlPolar
-          AnchorSideTop.Control = cbFilled
-          AnchorSideTop.Side = asrBottom
-          Left = 9
-          Height = 15
-          Top = 98
-          Width = 86
-          BorderSpacing.Left = 8
-          BorderSpacing.Top = 16
-          Caption = 'Transparency (0)'
-          FocusControl = sbTransparency
-        end
-      end
     end
-  end
-  object ListChartSource1: TListChartSource
-    DataPoints.Strings = (
-      '0|7|?|'
-      '0|3|?|'
-      '0|1|?|'
-      '0.2|0.2|?|'
-      '0|1|?|'
-    )
-    Left = 64
-    Top = 256
-  end
-  object ChartToolset1: TChartToolset
-    Left = 64
-    Top = 200
-  end
-  object RandomChartSource1: TRandomChartSource
-    PointsNumber = 15
-    RandSeed = 1648434073
-    XMax = 6
-    YCount = 2
-    YMax = 10
-    YMin = 2
-    Left = 64
-    Top = 316
   end
 end
