--- a/components/tachart/demo/dragdrop/main.lfm
+++ b/components/tachart/demo/dragdrop/main.lfm
@@ -1,234 +1,28 @@
-object Form1: TForm1
-  Left = 404
+object MainForm: TMainForm
+  Left = 405
   Height = 550
   Top = 180
-  Width = 571
-  Caption = 'Form1'
+  Width = 570
+  Caption = 'TAChart Mouse Events Demo'
   ClientHeight = 550
-  ClientWidth = 571
-  OnCreate = FormCreate
+  ClientWidth = 570
   Position = poScreenCenter
-  LCLVersion = '2.3.0.0'
-  object PageControl1: TPageControl
+  LCLVersion = '4.99.0.0'
+  OnCreate = FormCreate
+  object PageControl: TPageControl
     Left = 0
     Height = 550
     Top = 0
-    Width = 571
-    ActivePage = tsPoints
+    Width = 570
+    ActivePage = tsBars
     Align = alClient
-    TabIndex = 0
+    TabIndex = 1
     TabOrder = 0
     object tsPoints: TTabSheet
       Caption = 'Points'
-      ClientHeight = 522
-      ClientWidth = 563
-      object chPoints: TChart
-        Left = 0
-        Height = 486
-        Top = 36
-        Width = 563
-        AutoFocus = True
-        AxisList = <        
-          item
-            Marks.LabelBrush.Style = bsClear
-            Minors = <>
-            Title.LabelFont.Orientation = 900
-            Title.LabelBrush.Style = bsClear
-          end        
-          item
-            Alignment = calBottom
-            Marks.LabelBrush.Style = bsClear
-            Minors = <>
-            Title.LabelBrush.Style = bsClear
-          end>
-        Foot.Brush.Color = clBtnFace
-        Foot.Font.Color = clBlue
-        Margins.Left = 8
-        Margins.Top = 8
-        Margins.Right = 8
-        Margins.Bottom = 8
-        Title.Brush.Color = clBtnFace
-        Title.Font.Color = clBlue
-        Title.Text.Strings = (
-          'Drag data points while holding Shift key'
-          'Change point color by right-click'
-          'Show hint while holding ctrl key'
-        )
-        Title.Visible = True
-        Toolset = ctPoints
-        Align = alClient
-        DoubleBuffered = True
-        object chPointsLineSeries1: TLineSeries
-          OnGetMark = chPointsLineSeries1GetMark
-          Marks.Clipped = False
-          Marks.Format = '%0:.9g'
-          Marks.Style = smsValue
-          Pointer.Brush.Color = clPurple
-          Pointer.HorizSize = 6
-          Pointer.Style = psDiamond
-          Pointer.VertSize = 6
-          Pointer.Visible = True
-          ShowPoints = True
-        end
-      end
-      object Panel1: TPanel
-        Left = 0
-        Height = 36
-        Top = 0
-        Width = 563
-        Align = alTop
-        AutoSize = True
-        BevelOuter = bvNone
-        ClientHeight = 36
-        ClientWidth = 563
-        TabOrder = 1
-        object cbSorted: TCheckBox
-          AnchorSideLeft.Control = Panel1
-          AnchorSideTop.Control = Panel1
-          AnchorSideTop.Side = asrCenter
-          Left = 8
-          Height = 19
-          Top = 9
-          Width = 54
-          BorderSpacing.Around = 8
-          Caption = 'Sorted'
-          OnChange = cbSortedChange
-          TabOrder = 0
-        end
-      end
     end
     object tsBars: TTabSheet
       Caption = 'Bars'
-      ClientHeight = 522
-      ClientWidth = 563
-      object chBars: TChart
-        Left = 0
-        Height = 486
-        Top = 36
-        Width = 563
-        AxisList = <        
-          item
-            Marks.LabelBrush.Style = bsClear
-            Minors = <>
-            Title.LabelFont.Orientation = 900
-            Title.LabelBrush.Style = bsClear
-          end        
-          item
-            Alignment = calBottom
-            Marks.LabelBrush.Style = bsClear
-            Minors = <>
-            Title.LabelBrush.Style = bsClear
-          end>
-        Foot.Brush.Color = clBtnFace
-        Foot.Font.Color = clBlue
-        Title.Brush.Color = clBtnFace
-        Title.Font.Color = clBlue
-        Title.Text.Strings = (
-          'Drag bars while holding SHIFT key down'
-        )
-        Title.Visible = True
-        Toolset = ctBars
-        Align = alClient
-        DoubleBuffered = True
-        object chBarsBarSeries1: TBarSeries
-          BarBrush.Color = clRed
-          ToolTargets = [nptPoint, nptYList]
-        end
-      end
-      object Panel2: TPanel
-        Left = 0
-        Height = 36
-        Top = 0
-        Width = 563
-        Align = alTop
-        AutoSize = True
-        BevelOuter = bvNone
-        ClientHeight = 36
-        ClientWidth = 563
-        TabOrder = 1
-        object rbDragY: TRadioButton
-          AnchorSideLeft.Control = Panel2
-          AnchorSideTop.Control = Panel2
-          AnchorSideTop.Side = asrCenter
-          Left = 8
-          Height = 19
-          Top = 9
-          Width = 179
-          BorderSpacing.Around = 8
-          Caption = 'Drag y value (grab bars at top)'
-          Checked = True
-          OnChange = rbDragYChange
-          TabOrder = 0
-          TabStop = True
-        end
-        object rbDragX: TRadioButton
-          AnchorSideLeft.Control = rbDragY
-          AnchorSideLeft.Side = asrBottom
-          AnchorSideTop.Control = Panel2
-          AnchorSideTop.Side = asrCenter
-          Left = 203
-          Height = 19
-          Top = 9
-          Width = 199
-          BorderSpacing.Left = 16
-          Caption = 'Drag x value (grab bars anywhere)'
-          OnChange = rbDragYChange
-          TabOrder = 1
-        end
-        object cbConstBarWidth: TCheckBox
-          AnchorSideLeft.Control = rbDragX
-          AnchorSideLeft.Side = asrBottom
-          Left = 410
-          Height = 19
-          Top = 8
-          Width = 119
-          BorderSpacing.Around = 8
-          Caption = 'constant bar width'
-          OnChange = cbConstBarWidthChange
-          TabOrder = 2
-        end
-      end
     end
-  end
-  object ctPoints: TChartToolset
-    Left = 127
-    Top = 157
-    object ctPointsDataPointDragTool1: TDataPointDragTool
-      Shift = [ssShift, ssLeft]
-      GrabRadius = 10
-      ActiveCursor = crDrag
-    end
-    object ctPointsDataPointClickTool1: TDataPointClickTool
-      Shift = [ssRight]
-      GrabRadius = 10
-      ActiveCursor = crHandPoint
-      OnPointClick = ctPointsDataPointClickTool1PointClick
-    end
-    object ctPointsDataPointHintTool1: TDataPointHintTool
-      Shift = [ssCtrl]
-      GrabRadius = 10
-      ActiveCursor = crHandPoint
-      OnHint = ctPointsDataPointHintTool1Hint
-      UseDefaultHintText = False
-    end
-  end
-  object ctBars: TChartToolset
-    Left = 127
-    Top = 224
-    object ctBarsDataPointDragTool1: TDataPointDragTool
-      Shift = [ssShift, ssLeft]
-      GrabRadius = 30
-      ActiveCursor = crSizeNS
-      Targets = [nptPoint, nptXList, nptYList]
-      OnDrag = ctBarsDataPointDragTool1Drag
-    end
-  end
-  object RandomChartSource1: TRandomChartSource
-    PointsNumber = 6
-    RandSeed = 71866733
-    XMax = 10
-    YMax = 1
-    Left = 128
-    Top = 104
   end
 end
